prefers-contrast fixes hopefully

--- a/browser/themes/windows/browser-aero.css
+++ b/browser/themes/windows/browser-aero.css
@@ -98,6 +98,19 @@
         height: 12px;
       }
 
+      .titlebar-button{
+        background-color: transparent !important;
+        -moz-context-properties: stroke !important;
+        stroke: currentColor !important;
+      }
+
+      .titlebar-button:hover {
+        background-color: hsla(0,0%,100%,.32) !important
+      }
+      .titlebar-close:hover {
+        background-color: hsl(355,86%,49%) !important
+      }
+
       .titlebar-min {
         list-style-image: url(chrome://browser/skin/window-controls/minimize.svg);
       }
